add good rod and super rod textures (models failing)

--- a/src/main/resources/assets/meteorology/lang/en_us.json
+++ b/src/main/resources/assets/meteorology/lang/en_us.json
@@ -9,6 +9,8 @@
   "item.meteorology.ruby_sword": "Ruby Sword",
 
   "item.meteorology.bone_hoe": "Bone Hoe",
+  "item.meteorology.good_rod": "Good Rod",
+  "item.meteorology.super_rod": "Super Rod",
 
   "item.meteorology.ruby_helmet": "Ruby Helmet",
   "item.meteorology.ruby_chestplate": "Ruby Chestplate",
